@@ -1,6 +1,8 @@
 devel
 -----
 
+* fixed arangoimp script for MacOSX CLI Bundle
+
 * added "peakMemoryUsage" in query results figures, showing the peak memory
   usage of the executed query. In a cluster, the value the peak memory usage
   of all shards, but it is not summed up across shards.
